syntax = "proto3";

package carelink.medicalhistory;

option java_multiple_files = true;
option java_package = "com.carelink.grpc.medicalhistory";
option java_outer_classname = "MedicalHistoryProto";

// Service definition
service MedicalHistoryService {
  rpc AddMedicalRecord (AddMedicalRecordRequest) returns (AddMedicalRecordResponse);
  rpc GetMedicalRecord (GetMedicalRecordRequest) returns (GetMedicalRecordResponse);
  rpc GetMedicalHistory (GetMedicalHistoryRequest) returns (GetMedicalHistoryResponse);
  rpc UpdateMedicalRecord (UpdateMedicalRecordRequest) returns (UpdateMedicalRecordResponse);
  rpc DeleteMedicalRecord (DeleteMedicalRecordRequest) returns (DeleteMedicalRecordResponse);
}

// Add record request
message AddMedicalRecordRequest {
  int32 patientId = 1;
  int32 doctorId = 2;
  string notes = 3;
  string prescriptions = 4;
  string updatedBy = 5;
  string attachmentUrl = 6;
  int32 historyId = 7;
}

message AddMedicalRecordResponse {
  int32 recordId = 1;
  string message = 2;
}

// Get record by ID
message GetMedicalRecordRequest {
  int32 recordId = 1;
}

message GetMedicalRecordResponse {
  int32 recordId = 1;
  int32 patientId = 2;
  int32 doctorId = 3;
  string notes = 4;
  string prescriptions = 5;
  string updatedBy = 6;
  string attachmentUrl = 7;
  int32 historyId = 8;
}

// Get full history by patient
message GetMedicalHistoryRequest {
  int32 patientId = 1;
}

message GetMedicalHistoryResponse {
  repeated MedicalRecordMessage records = 1;
}

// Reusable record message
message MedicalRecordMessage {
  int32 recordId = 1;
  int32 patientId = 2;
  int32 doctorId = 3;
  string notes = 4;
  string prescriptions = 5;
  string updatedBy = 6;
  string attachmentUrl = 7;
  int32 historyId = 8;
}

// Update record
message UpdateMedicalRecordRequest {
  int32 recordId = 1;
  int32 patientId = 2;
  int32 doctorId = 3;
  string notes = 4;
  string prescriptions = 5;
  string updatedBy = 6;
  string attachmentUrl = 7;
  int32 historyId = 8;
}

message UpdateMedicalRecordResponse {
  string message = 1;
}

// Delete record
message DeleteMedicalRecordRequest {
  int32 recordId = 1;
}

message DeleteMedicalRecordResponse {
  string message = 1;
}